[metadata]
name = hnv_client
version = 0.1.0
summary = Python client for the HNV (Hyper-V Network Virtualization) REST API.
description-file =
  README.md
author = Cloudbase Solutions Srl
author-email = acoman@cloudbasesolutions.com
home-page = https://github.com/cloudbase/python-hnvclient
classifier =
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5

[files]
packages =
  hnv_client

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
oslo.config.opts =
    hnv_client = hnv_client.config.options:get_options

[wheel]
universal = 1
