[metadata]
name = python-hnvclient
version = 0.1.0
summary = Python client for the HNV (Hyper-V Network Virtualization) REST API.
description-file =
    README.rst
author = Cloudbase Solutions Srl
author-email = acoman@cloudbasesolutions.com
home-page = https://github.com/cloudbase/python-hnvclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    hnvclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = hnvclient/locale
domain = hnvclient

[update_catalog]
domain = hnvclient
output_dir = hnvclient/locale
input_file = hnvclient/locale/hnvclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = hnvclient/locale/hnvclient.pot

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
